--- a/index.html
+++ b/index.html
@@ -128,7 +128,26 @@
             >AssombradO.com.br</a
           >
         </p>
-        <div id="inscreva-se"></div>
+        <form>
+          <h3>Inscreva-se!</h3>
+
+          <label>
+            Email:
+            <input type="email" name="subscription" />
+          </label>
+
+          <label>
+            Nome:
+            <input type="text" name="subscription" />
+          </label>
+
+          <label>
+            Aceito receber promoções
+            <input type="checkbox" name="subscription" />
+          </label>
+
+          <button type="submit">Inscrever</button>
+        </form>
       </div>
     </footer>
 
