--- a/index.html
+++ b/index.html
@@ -108,6 +108,25 @@
           </h2>
         </article>
       </section>
+
+      <img
+        id="ghost-1"
+        class="boo"
+        src="imgs/boo1.gif"
+        alt="Desenho de fantasminha fazendo careta"
+      />
+      <img
+        id="ghost-2"
+        class="boo"
+        src="imgs/boo2.gif"
+        alt="Desenho de fantasminha fazendo careta"
+      />
+      <img
+        id="ghost-3"
+        class="boo"
+        src="imgs/boo3.gif"
+        alt="Desenho de fantasminha fazendo careta"
+      />
     </main>
 
     <footer>
@@ -175,5 +194,7 @@
         e.currentTarget.classList.add("desaparecido");
       });
     </script>
+
+    <script src="boos.js"></script>
   </body>
 </html>
